# ShadowDesk

./: .gitignore  LICENSE  README.md  docker-compose.yml
project/: .gitignore  pyproject.toml  requirements.txt
project/.github/: README.md
project/.github/workflows/: ci.yml
project/cluster_a/: __init__.py
project/cluster_a/minio_client/: __init__.py
project/cluster_b/api/: __init__.py  config.py  main.py
project/cluster_b/trading/: broker.py  executor.py  signals.py
project/cluster_b/train/: data_ingestion.py  features.py  hourly_data_ingestion.py  stock_data_pipeline.py  train.py  xgboost_trainer.py
project/dashboard-streamlit/: app.py  config.py  requirements.txt
project/dashboard-streamlit/.streamlit/: config.toml
project/dashboard-streamlit/components/: chart.py  position_card.py  pulse.py  styles.py
project/dashboard-streamlit/pages/: 1_Dashboard.py  2_Signals.py  3_Trade_Execution.py  4_Analytics.py  5_Settings.py
project/dashboard-streamlit/utils/: api_client.py  auth.py  logger.py
project/docker/: airflow.Dockerfile  fastapi.Dockerfile  mlflow.Dockerfile  requirements-airflow.txt  requirements-fastapi.txt  requirements-mlflow.txt  requirements-streamlit.txt  streamlit.Dockerfile
project/shared/storage/: __init__.py  minio_helper.py  qdrant_helper.py
project/tests/: __init__.py  conftest.py  local_stack_bootstrap.py  test_account_routes.py  test_dashboard_api_client.py  test_example.py  test_metrics.py  test_trading_api.py  test_trading_broker.py  test_trading_routes.py  validate_local_stack.py  validate_ui_track1.py
(+58 files in other folders)
