[project]
name = "shadowdesk"
version = "1.0.0"
description = "ML-powered stock trading recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "minio>=7.2.0",
    "qdrant-client>=1.7.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "prometheus-client>=0.21.0",
    "ib_insync>=0.9.8",
    "alpaca-trade-api>=3.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "yfinance>=0.2.0",
    "pandas-ta>=0.3.14b",
    "streamlit>=1.30.0",
    "streamlit-lightweight-charts>=0.1.0",
    "streamlit-autorefresh>=1.0.0",
    "hvac>=2.0.0",
    "websocket-client>=1.6.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-config --strict-markers --maxfail=1"
filterwarnings = [
    "error",
]
asyncio_mode = "auto"
markers = [
    "api: FastAPI route contract tests",
    "unit: unit tests with mocked dependencies",
]
